--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -8,7 +8,7 @@
 <p><strong>Email:</strong> {{ current_user.email }}</p>
 
 <h3>Borrowed Books</h3>
-{% if borrows %}
+{% if current_user.borrows %}
   <ul>
     {% for borrow in borrows %}
       <li>{{ borrow.book.title }} by {{ borrow.book.author }}</li>
