--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -22,6 +22,9 @@
         {{ form.confirm_password.label(class="form-control-label") }}
         {{ form.confirm_password(class="form-control", placeholder="Confirm Password") }}
     </div>
+    {% if form.errors %}
+    {{ form.errors }}
+    {% endif %}
     <button type="submit" class="btn btn-primary">Register</button>
 </form>
 {% endblock %}
